--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:WatchAll": "jest --watchAll"
   },
   "dependencies": {
     "@types/node": "20.6.0",
@@ -17,6 +19,24 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.0.7",
+    "styled-media-query": "^2.1.2",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.6.4",
+    "@swc/core": "^1.3.83",
+    "@swc/jest": "github:testing-library/jest-dom",
+    "@swc/plugin-styled-components": "^1.5.80",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.4",
+    "@types/styled-components": "^5.1.26",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-testing-library": "^6.0.1",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
+    "ts-jest": "^29.1.1"
   }
 }
