--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.276.0",
-    "next": "13.4.19",
+    "next": "^13.4.20-canary.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.7",
