--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:WatchAll": "jest --watchAll"
   },
   "dependencies": {
+    "@capacitor/android": "^5.4.0",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -26,6 +27,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@capacitor/cli": "^5.4.0",
     "@jest/globals": "^29.6.4",
     "@swc/core": "^1.3.83",
     "@swc/jest": "github:testing-library/jest-dom",
