--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-testing-library": "^6.0.1",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
+    "sass": "^1.68.0",
     "ts-jest": "^29.1.1"
   }
 }
